--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                      <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
                  </li> 
                  {% endfor %}
-                 <li> <a href="https://github.com/neuromusic" target="_blank">GitHub</a></li>
+                 <li> <a href="https://docs.google.com/document/d/1smTlscUVpQ3QvJZ4_7CWmPeDwnp--MU8MZcwPs_T2nM/preview" target="_blank">CV</a></li>
              </ul>
          </nav>
      </div>
