--- a/assets/scss/partials/_typography.scss
+++ b/assets/scss/partials/_typography.scss
@@ -110,3 +110,13 @@ blockquote {
     line-height: 1.45833333; // 35px / 24px
   }
 }
+
+code {
+  font-size: 0.8em;
+}
+
+@media (min-width: 43.75em) {
+  code {
+    font-size: 0.9em;
+  }
+}
