--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,25 +21,21 @@
 
     <!-- Twitter summary card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@neuromusic">
-    <meta name="twitter:creator" content="@neuromusic">
-
+    <meta name="twitter:site" content="@{{site.social.twitter}}">
+    <meta name="twitter:creator" content="@{{site.social.twitter}}">
     {% if page.title %}
     <meta name="twitter:title" content="{{ page.title }}">
     {% else %}
     <meta name="twitter:title" content="{{ site.title }}">
     {% endif %}    
-
     {% if page.url %}
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
     {% endif %}
-
     {% if page.content %}
-    <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
+    <meta name="twitter:description" content="{% page.content | strip_html | xml_escape | truncate: 200 %}">
     {% else %}
     <meta name="twitter:description" content="{{ site.description }}">
     {% endif %}
-
     {% if page.image %}
     <meta name="twitter:image:src" content="{{ site.url }}/assets/img/{{ page.image }}">
     {% else %}
