--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
     {% endif %}
     {% if page.layout == 'post' %}
-    <meta name="twitter:description" content="{% page.content | strip_html | xml_escape | truncate: 200 %}">
+    <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
     {% else %}
     <meta name="twitter:description" content="{{ site.description }}">
     {% endif %}
