--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,9 +42,9 @@
     <meta name="twitter:description" content="{{ site.description }}">
     {% endif %}
     {% if page.image %}
-    <meta name="twitter:image:src" content="{{ site.url }}/assets/img/{{ page.image }}">
+    <meta name="twitter:image" content="{{ site.url }}/assets/img/{{ page.image }}">
     {% else %}
-    <meta name="twitter:image:src" content="{{ site.url }}/assets/img/agave.jpg">
+    <meta name="twitter:image" content="{{ site.url }}/assets/img/agave.jpg">
     {% endif %}
 
     <!-- Google Analytics -->
