new job. new landing page.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
     {% if page.image %}
     <meta name="twitter:image" content="{{ site.url }}/assets/img/{{ page.image }}">
     {% else %}
-    <meta name="twitter:image" content="{{ site.url }}/assets/img/agave.jpg">
+    <meta name="twitter:image" content="{{ site.url }}/assets/img/grand-canyon-unsplash-jad-limcaco.jpg">
     {% endif %}
 
     <!-- Google Analytics -->
