--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -169,7 +169,7 @@ HEADER STYLING
 
 .header {
 	background-color: $primary-color;
-	background-image: url('../img/agave.jpg');
+	background-image: url('../img/grand-canyon-unsplash-jad-limcaco.jpg');
 	background-size: cover; 
 	background-position: center center;
 	color: white;
