--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -25,9 +25,9 @@ $grey:   #aaa;
 $black:  #111;
 
 // Color variables
-$primary-color: cornflowerblue;
-$secondary-color: #233E5B;
-$tertiary-color: #aaa;
+$primary-color: #252D42;
+$secondary-color: #8C706E;
+$tertiary-color: #F5A463;
 $link-color: $primary-color;
 
 $bad-color: $red; // Bad color for errors, validation etc.
