updates landing page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
                  {% endfor %}
                  <li> <a href="https://github.com/neuromusic" target="_blank">Github</a></li>
                  <li> <a href="https://linkedin.com/in/justinkiggins" target="_blank">LinkedIn</a></li>
+                 <li> <a href="https://twitter.com/neuromusic" target="_blank">Twitter</a></li>
              </ul>
          </nav>
      </div>
